attach/run stubs

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,6 +9,7 @@ readme.workspace = true
 
 [dependencies]
 clap = { workspace = true }
+libdrbug = { workspace = true }
 
 [dev-dependencies]
 rstest = { workspace = true }
