--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ license = "MIT"
 readme = "README.md"
 
 [workspace.dependencies]
-clap = "4.5.40"
+clap = { version = "4.5.40", features = ["cargo", "derive"] }
 nix = "0.30.1"
+libdrbug = { path = "libdrbug" }
 rstest = "0.25.0"
