--- a/libdrbug/Cargo.toml
+++ b/libdrbug/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 readme.workspace = true
 
 [dependencies]
+anyhow = "1.0.98"
 nix = { workspace = true }
 
 [dev-dependencies]
