--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ readme = "README.md"
 
 [workspace.dependencies]
 clap = { version = "4.5.40", features = ["cargo", "derive"] }
-nix = "0.30.1"
+nix = { version = "0.30.1", features = ["process", "ptrace"] }
 libdrbug = { path = "libdrbug" }
 rstest = "0.25.0"
