--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = "1.0.98"
 assertables = "9.8.0"
 clap = { version = "4.5.40", features = ["cargo", "derive"] }
 nix = { version = "0.30.1", features = ["fs", "process", "ptrace"] }
+libc = "0.2.174"
 libdrbug = { path = "libdrbug" }
 rstest = "0.25.0"
 rustyline = "16.0.0"
