--- a/libdrbug/Cargo.toml
+++ b/libdrbug/Cargo.toml
@@ -9,6 +9,7 @@ readme.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
+libc = { workspace = true }
 nix = { workspace = true }
 
 [dev-dependencies]
