add clap for repl parsing

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,10 +8,11 @@ license.workspace = true
 readme.workspace = true
 
 [dependencies]
+anyhow = { workspace = true }
 clap = { workspace = true }
 libdrbug = { workspace = true }
-nix = { workspace = true }
 rustyline = { workspace = true }
+shlex = { workspace = true }
 
 [dev-dependencies]
 rstest = { workspace = true }
