fixing bugs and adding tests

--- a/libdrbug/Cargo.toml
+++ b/libdrbug/Cargo.toml
@@ -15,4 +15,6 @@ thiserror = { workspace = true }
 
 [dev-dependencies]
 assertables = { workspace = true }
+elf = { workspace = true }
+regex = { workspace = true }
 rstest = { workspace = true }
