--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,17 @@ assertables = "9.8.0"
 clap = { version = "4.5.40", features = ["cargo", "derive"] }
 derive_more = { version = "2.0.1", features = ["full"] }
 elf = "0.8.0"  # TODO: remove in Chapter 11
+itertools = "0.14.0"
 libc = "0.2.172"
 libdrbug = { path = "libdrbug" }
-nix = { git = "https://github.com/drmorr0/nix", branch = "drmorr/getfpregs", features = ["fs", "personality", "process", "ptrace", "signal"] }
 paste = "1.0.15"
 regex = "1.11.1"
 rstest = "0.25.0"
 rustyline = "16.0.0"
 shlex = "1.3.0"
 thiserror = "2.0.12"
+
+[workspace.dependencies.nix]
+git = "https://github.com/drmorr0/nix"
+branch = "drmorr/getfpregs"
+features = ["fs", "personality", "process", "ptrace", "signal", "uio"]
