--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,7 @@ readme.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 clap = { workspace = true }
+itertools = { workspace = true }
 libdrbug = { workspace = true }
 paste = { workspace = true }
 rustyline = { workspace = true }
